# meeting_recorder

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Lesson.md  Plan.md  README.md  Task.md  docker-compose.deploy.yml  docker-compose.hub.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
api/: auth.py  cors.py  main.py  runtime.py
config/: logging_config.py  settings.py
database/: migrations.py  models.py  session.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: development.md
providers/: __init__.py  base.py  jitsi.py  webex.py  zoom.py
recording/: activity.py  capacity_guard.py  detection.py  detectors.py  ffmpeg_pipeline.py  job_types.py  monitor.py  mp4_validation.py  pactl.py  post_processing.py  remux.py  runtime_checks.py  runtime_resources.py  session.py  subprocess_utils.py  transcode.py  virtual_env.py  worker.py
scheduling/: job_runner.py  recording_executor.py  schedule_queue.py  scheduler.py  upload_runner.py
scripts/: __init__.py  dev_compose.py  docker_runtime_guard.py  migrate_dry_run.py  migrate_duration_mode.py  smoke_recording.py  test_provider.py
services/: __init__.py  app_settings.py  errors.py  job_actions.py  job_runtime_state.py  job_service.py  meeting_service.py  notification.py  recording_manager.py  runtime_config.py  schedule_service.py  secrets.py  storage_maintenance.py
telegram_bot/: __init__.py  bot.py  conversation_common.py  conversation_create_meeting.py  conversation_create_schedule.py  conversation_edit_schedule.py  conversations.py  handlers.py  keyboards.py  notifications.py  session.py
testing/: __init__.py  executor.py  models.py
tests/: conftest.py  fixture_pages.py  test_activity.py  test_auth.py  test_capacity_guard.py  test_database_modules.py  test_detection.py  (+40 more)
(+70 files in other folders)
