[project]
name = "auto-meet-recorder"
version = "0.1.0"
description = "Automated online meeting recording system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "playwright>=1.40.0",
    "sqlalchemy>=2.0.0",
    "apscheduler>=3.10.0",
    "python-telegram-bot>=20.7",
    "httpx>=0.26.0",
    "jinja2>=3.1.0",
    "cron-descriptor>=1.4.0",
    "python-multipart>=0.0.6",
    "croniter>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "config", "database", "providers", "recording", "scheduling", "telegram_bot", "uploading"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E711",   # comparison to None (SQLAlchemy needs == None)
    "E712",   # comparison to True/False (SQLAlchemy needs == True)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from (common in HTTP error handling)
]

[tool.ruff.lint.isort]
known-first-party = ["api", "config", "database", "providers", "recording", "scheduling", "telegram_bot", "uploading"]
